docs/api/qiskit/0.19/qiskit.visualization.visualize_transition.mdx
---
title: visualize_transition (v0.19)
description: API reference for qiskit.visualization.visualize_transition in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.visualization.visualize_transition
---

<span id="visualize-transition" />

# visualize\_transition

<Function id="qiskit.visualization.visualize_transition" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/visualization/transition_visualization.py" signature="visualize_transition(circuit, trace=False, saveas=None, fpg=100, spg=2)">
  Creates animation showing transitions between states of a single qubit by applying quantum gates.

  **Parameters**

  *   **circuit** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – Qiskit single-qubit QuantumCircuit. Gates supported are h,x, y, z, rx, ry, rz, s, sdg, t, tdg and u1.
  *   **trace** (*bool*) – Controls whether to display tracing vectors - history of 10 past vectors at each step of the animation.
  *   **saveas** (*str*) – User can choose to save the animation as a video to their filesystem. This argument is a string of path with filename and extension (e.g. “movie.mp4” to save the video in current working directory).
  *   **fpg** (*int*) – Frames per gate. Finer control over animation smoothness and computiational needs to render the animation. Works well for tkinter GUI as it is, for jupyter GUI it might be preferable to choose fpg between 5-30.
  *   **spg** (*int*) – Seconds per gate. How many seconds should animation of individual gate transitions take.

  **Returns**

  If arg jupyter is set to True. Otherwise opens tkinter GUI and returns after the GUI is closed.

  **Return type**

  IPython.core.display.HTML

  **Raises**

  *   **ImportError** – Must have Matplotlib (and/or IPython) installed.
  *   [**VisualizationError**](qiskit.visualization.VisualizationError "qiskit.visualization.VisualizationError") – Given gate(s) are not supported.
</Function>

